Fixed the scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ html {
 #terminal_content {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
     overflow-x: hidden;
 }
 
